three-tier-app/03-headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-headless
  namespace: prod
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
