three-tier-app/06-service-read.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-read
  namespace: prod
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
