three-tier-app/09-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-depo
  namespace: db
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
      containers:
        - name: backend
          image: harishnshetty/backend-signed:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            limits:
              memory: "128Mi"
              cpu: "256m"
            requests:
              memory: "64Mi"
              cpu: "128m"
          ports:
            - containerPort: 4000
          livenessProbe:
            httpGet:
              path: /health
              port: 4000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 4000
            initialDelaySeconds: 30
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: db
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: 3tier-route
#   namespace: default
# spec:
#   parentRefs:
#     - name: external-gateway
#       namespace: gateway
#       sectionName: https
#   hostnames:
#     - 3tier.harishshetty.xyz
#   rules:
#     - matches:
#         - path:
#             type: PathPrefix
#             value: /health
#         - path:
#             type: PathPrefix
#             value: /transaction
#       backendRefs:
#         - kind: Service
#           name: backend-svc
#           namespace: default
#           port: 4000
